--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,76 +1,87 @@
-<!--activity_main-->
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:padding="20dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:padding="16dp"
-    android:layout_width="match_parent" android:layout_height="match_parent">
-
-<!--    <EditText-->
-<!--        android:id="@+id/dataEditText"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:hint="Wprowadź dane do zapisu"/>-->
-<!--    <TextView-->
-<!--        android:id="@+id/dataTextView"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="Dane użytkownika zostaną tutaj wyświetlone"/>-->
+    <!-- Cienka linia -->
 
     <TextView
         android:id="@+id/dataTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="40dp"
+        android:layout_marginTop="35dp"
         android:text="Hi [Nick]!"
         android:textColor="#000000"
         android:textSize="36sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/separatorLine"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:background="#DDDDDD"
+        app:layout_constraintTop_toBottomOf="@id/dataTextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="25dp"/>
 
     <Button
         android:id="@+id/contactsButton"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Your contacts"
         android:background="@drawable/btn_r"
         android:backgroundTint="#2A9D8F"
         android:textColor="@android:color/white"
         android:textSize="20sp"
-        android:layout_marginBottom="16dp"/>
+        app:layout_constraintTop_toBottomOf="@id/dataTextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"/>
 
-    <!-- Przycisk alarmów -->
     <Button
         android:id="@+id/alarmsButton"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Alarms"
         android:background="@drawable/btn_r"
         android:backgroundTint="#E9C46A"
         android:textColor="@android:color/white"
         android:textSize="20sp"
-        android:layout_marginBottom="16dp"/>
+        app:layout_constraintTop_toBottomOf="@id/contactsButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"/>
 
-    <!-- Przycisk danych użytkownika -->
     <Button
         android:id="@+id/dataButton"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Your data"
         android:background="@drawable/btn_r"
         android:backgroundTint="#F4A261"
         android:textColor="@android:color/white"
-        android:textSize="20sp"/>
-
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@id/alarmsButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"/>
 
     <Button
         android:id="@+id/logoutButton"
-        android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:text="Wyloguj się"
-        android:textSize="20sp"
-        android:backgroundTint="#E53935"
-        android:textColor="#FFFFFF"
-        android:layout_marginTop="16dp"
-        android:cornerRadius="12dp" />
-</LinearLayout>
-
-
-
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:background="@drawable/round_button_background"
+        android:text="⎋"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:textColor="#E53935"
+        android:rotation="135"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
