--- a/app/src/main/res/layout/activity_alarms.xml
+++ b/app/src/main/res/layout/activity_alarms.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="20dp"
+    android:padding="24dp"
     android:background="#F5F5F5">
 
     <ImageButton
@@ -18,17 +18,20 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="16dp" />
 
+
     <TextView
         android:id="@+id/accText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Akcelerometr: "
-        android:textSize="18sp"
-        android:padding="16dp"
-        android:textColor="#000000"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:paddingVertical="12dp"
+        android:textColor="#333333"
         app:layout_constraintTop_toBottomOf="@id/backButton"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="24dp"/>
 
     <TextView
         android:id="@+id/gyroText"
@@ -36,19 +39,22 @@
         android:layout_height="wrap_content"
         android:text="Żyroskop: "
         android:textSize="18sp"
-        android:padding="16dp"
-        android:textColor="#000000"
+        android:paddingVertical="10dp"
+        android:textColor="#555555"
         app:layout_constraintTop_toBottomOf="@id/accText"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="12dp"/>
+
     <TextView
         android:id="@+id/statusText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Status: ..."
         android:textColor="#B31F1F"
-        android:textSize="14sp"
-        android:layout_marginTop="12dp"
+        android:textSize="16sp"
+        android:textStyle="italic"
+        android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@id/gyroText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
